# CPP-Reflection

./: LICENSE.txt  README.md
Examples/: Arrays.cpp  CMakeLists.txt  Enums.cpp  FunctionsAndMethods.cpp  MetaProperties.cpp  Serialization.cpp  TestProperties.h  TestReflection.h  TestReflectionModule.h  TestTypes.h
Resources/Templates/: field-getter.mustache  field-setter.mustache  global-getter.mustache  global-setter.mustache  meta-initializer-list.mustache  module-file-header.mustache  module-file-source.mustache  module-header.mustache  module-source.mustache
Source/: MacroUtils.h
Source/CMake/: FindLLVM.cmake  MetaParser.cmake  Precompiled.cmake
Source/Common/: Compiler.h  Logging.h  Logging.hpp
Source/Parser/: CMakeLists.txt  CppAaS.sln  Cursor.cpp  Cursor.h  CursorType.cpp  CursorType.h  Main.cpp  MetaDataConfig.h  MetaDataManager.cpp  MetaDataManager.h  MetaUtils.cpp  MetaUtils.h  Mustache.h  Namespace.h  Precompiled.h  ReflectionOptions.h  ReflectionParser.cpp  ReflectionParser.h  ReservedTypes.h  Switches.h  Templates.h  Version.h  docker-compose.ci.build.yml  docker-compose.dcproj  docker-compose.override.yml  docker-compose.yml
Source/Parser/CppAaS/: CppAaS.csproj  Dockerfile  Program.cs  Startup.cs
Source/Parser/CppAaS/Properties/: launchSettings.json
Source/Parser/LanguageTypes/: Class.cpp  Class.h  Constructor.cpp  Constructor.h  Enum.cpp  Enum.h  Field.cpp  Field.h  Function.cpp  Function.h  Global.cpp  Global.h  Invokable.cpp  Invokable.h  LanguageType.cpp  LanguageType.h  Method.cpp  Method.h
Source/Parser/Legacy/: Cursor.h  CursorType.cpp  Main.cpp  MetaDataConfig.h  MetaDataManager.cpp  MetaUtils.hpp  Namespace.h  Precompiled.cpp  Precompiled.h  ReflectionOptions.h  ReservedTypes.h  Templates.h
Source/Parser/Legacy/LanguageTypes/: Constructor.cpp  Constructor.h  Enum.h  External.cpp  External.h  Field.cpp  Field.h  Function.cpp  Global.cpp  Invokable.cpp  LanguageType.cpp  LanguageType.h  Method.cpp  Method.h
Source/Parser/Legacy/Module/: ModuleFile.h
Source/Parser/Legacy/Tokenizer/: ConstructorTokenSymbols.inl  Token.h  TokenType.h  Tokenizer.h
Source/Parser/Legacy/Tokenizer/Impl/: Token.hpp  Tokenizer.hpp
Source/Parser/Tokenizer/: TokenizerResult.h  TokenizerState.h
Source/Parser/Tokenizer/Impl/: TokenizerResult.hpp  TokenizerState.hpp
Source/Runtime/: Argument.cpp  Argument.h  ArgumentConfig.h  Array.h  ArrayConfig.h  ArrayVariantContainer.h  ArrayWrapper.cpp  ArrayWrapper.h  ArrayWrapperBase.h  ArrayWrapperContainer.h  CMakeLists.txt  Constructor.cpp  Constructor.h  ConstructorInvoker.h  ConstructorInvokerBase.h  Destructor.cpp  Destructor.h  DestructorInvoker.h  DestructorInvokerBase.h  Enum.cpp  Enum.h  EnumBase.cpp  EnumBase.h  EnumContainer.h  Field.cpp  Field.h  FieldGetter.h  FieldGetterBase.h  FieldSetter.h  FieldSetterBase.h  Function.cpp  Function.h  FunctionInvoker.h  FunctionInvokerBase.h  Global.cpp  Global.h  GlobalGetter.h  GlobalGetterBase.h  GlobalSetter.h  GlobalSetterBase.h  (+42 more)
Source/Runtime/Impl/: Argument.hpp  Array.hpp  ArrayVariantContainer.hpp  ArrayWrapper.hpp  ArrayWrapperContainer.hpp  Constructor.hpp  ConstructorInvoker.hpp  Destructor.hpp  DestructorInvoker.hpp  EnumContainer.hpp  FieldGetter.hpp  FieldSetter.hpp  Function.hpp  FunctionInvoker.hpp  GlobalGetter.hpp  GlobalSetter.hpp  Invokable.hpp  MetaManager.hpp  MetaProperty.hpp  Method.hpp  MethodInvoker.hpp  ReflectionDatabase.hpp  Type.hpp  TypeCreator.hpp  TypeData.hpp  TypeInfo.hpp  TypeUnpacker.hpp  Variant.hpp  VariantContainer.hpp  VariantContainerStandardTypes.hpp  VoidFunctionInvoker.hpp  VoidMethodInvoker.hpp
Templates/: constructor-invocation.mustache  dynamic-constructor-invocation.mustache  field-getter.mustache  field-setter.mustache  function-invocation.mustache  global-getter.mustache  global-setter.mustache  header.mustache  method-invocation.mustache  source.mustache
